errors.log
In file included from srcs/cub3d.c:13:
srcs/cub3d.h:178:8: error: conflicting types for 'normalize_angle'
double  normalize_angle(double rotation);
        ^
srcs/cub3d.h:159:7: note: previous declaration is here
float   normalize_angle(float rotation);
        ^
1 error generated.
In file included from srcs/map_parsing/file_parcer.c:13:
srcs/map_parsing/../cub3d.h:178:8: error: conflicting types for 'normalize_angle'
double  normalize_angle(double rotation);
        ^
srcs/map_parsing/../cub3d.h:159:7: note: previous declaration is here
float   normalize_angle(float rotation);
        ^
1 error generated.
In file included from srcs/map_parsing/data_init.c:13:
srcs/map_parsing/../cub3d.h:178:8: error: conflicting types for 'normalize_angle'
double  normalize_angle(double rotation);
        ^
srcs/map_parsing/../cub3d.h:159:7: note: previous declaration is here
float   normalize_angle(float rotation);
        ^
1 error generated.
In file included from srcs/map_parsing/check_map.c:13:
srcs/map_parsing/../cub3d.h:178:8: error: conflicting types for 'normalize_angle'
double  normalize_angle(double rotation);
        ^
srcs/map_parsing/../cub3d.h:159:7: note: previous declaration is here
float   normalize_angle(float rotation);
        ^
1 error generated.
In file included from srcs/display_management/bresenham_line_algo.c:13:
srcs/display_management/../cub3d.h:178:8: error: conflicting types for 'normalize_angle'
double  normalize_angle(double rotation);
        ^
srcs/display_management/../cub3d.h:159:7: note: previous declaration is here
float   normalize_angle(float rotation);
        ^
1 error generated.
In file included from srcs/display_management/coordinates_calculs.c:13:
srcs/display_management/../cub3d.h:178:8: error: conflicting types for 'normalize_angle'
double  normalize_angle(double rotation);
        ^
srcs/display_management/../cub3d.h:159:7: note: previous declaration is here
float   normalize_angle(float rotation);
        ^
1 error generated.
In file included from srcs/display_management/objects_drawing.c:13:
srcs/display_management/../cub3d.h:178:8: error: conflicting types for 'normalize_angle'
double  normalize_angle(double rotation);
        ^
srcs/display_management/../cub3d.h:159:7: note: previous declaration is here
float   normalize_angle(float rotation);
        ^
1 error generated.
In file included from srcs/display_management/window_management.c:13:
srcs/display_management/../cub3d.h:178:8: error: conflicting types for 'normalize_angle'
double  normalize_angle(double rotation);
        ^
srcs/display_management/../cub3d.h:159:7: note: previous declaration is here
float   normalize_angle(float rotation);
        ^
1 error generated.
In file included from srcs/event_handling/handle_keypress.c:2:
srcs/event_handling/../cub3d.h:178:8: error: conflicting types for 'normalize_angle'
double  normalize_angle(double rotation);
        ^
srcs/event_handling/../cub3d.h:159:7: note: previous declaration is here
float   normalize_angle(float rotation);
        ^
srcs/event_handling/handle_keypress.c:10:42: error: too many arguments to function call, expected single argument 'cub', have 3 arguments
    update_player_position(&cub->player, &cub->display.img, cub->input.map_arr);
    ~~~~~~~~~~~~~~~~~~~~~~               ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
srcs/event_handling/../cub3d.h:139:1: note: 'update_player_position' declared here
void    update_player_position(t_cub *cub);
^
srcs/event_handling/handle_keypress.c:12:17: error: passing 't_fcoords' (aka 'struct s_fcoords') to parameter of incompatible type 't_player *' (aka 'struct s_player *')
    draw_player(cub->player.pos, &cub->display.img, (CUB_SIZE / 6));
                ^~~~~~~~~~~~~~~
srcs/event_handling/../cub3d.h:142:28: note: passing argument to parameter 'player' here
void    draw_player(t_player *player, t_img *img, int size);
                              ^
3 errors generated.
In file included from srcs/event_handling/handle_mouse_events.c:1:
srcs/event_handling/../cub3d.h:178:8: error: conflicting types for 'normalize_angle'
double  normalize_angle(double rotation);
        ^
srcs/event_handling/../cub3d.h:159:7: note: previous declaration is here
float   normalize_angle(float rotation);
        ^
1 error generated.
In file included from srcs/event_handling/handle_misc_events.c:1:
srcs/event_handling/../cub3d.h:178:8: error: conflicting types for 'normalize_angle'
double  normalize_angle(double rotation);
        ^
srcs/event_handling/../cub3d.h:159:7: note: previous declaration is here
float   normalize_angle(float rotation);
        ^
1 error generated.
In file included from srcs/raycast_calculs/casting_rays.c:1:
srcs/raycast_calculs/../cub3d.h:178:8: error: conflicting types for 'normalize_angle'
double  normalize_angle(double rotation);
        ^
srcs/raycast_calculs/../cub3d.h:159:7: note: previous declaration is here
float   normalize_angle(float rotation);
        ^
srcs/raycast_calculs/casting_rays.c:31:38: error: use of undeclared identifier 'RAYS_LENGTH'
        ray.ray_angle += (FOV_ANGLE / RAYS_LENGTH);
                                     ^
2 errors generated.
In file included from srcs/raycast_calculs/cast.c:1:
srcs/raycast_calculs/../cub3d.h:178:8: error: conflicting types for 'normalize_angle'
double  normalize_angle(double rotation);
        ^
srcs/raycast_calculs/../cub3d.h:159:7: note: previous declaration is here
float   normalize_angle(float rotation);
        ^
1 error generated.
In file included from srcs/raycast_calculs/misc_functs.c:13:
srcs/raycast_calculs/../cub3d.h:178:8: error: conflicting types for 'normalize_angle'
double  normalize_angle(double rotation);
        ^
srcs/raycast_calculs/../cub3d.h:159:7: note: previous declaration is here
float   normalize_angle(float rotation);
        ^
srcs/raycast_calculs/misc_functs.c:31:1: error: version control conflict marker in file
<<<<<<< HEAD
^
srcs/raycast_calculs/misc_functs.c:44:1: error: version control conflict marker in file
<<<<<<< HEAD
^
3 errors generated.
